# Julep_AI-Assessment

./: .env  README.md  pyproject.toml  requirements.txt
Backend/: main.py
Frontend/: streamlit_app.py
YAML FIles/: adventurous_day_plan.yaml  foodie_day_planner.yaml  romantic_day_planning.yaml  tourist_plan.yaml
